--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@uploadthing/react": "^6.1.0",
     "axios": "^1.6.5",
+    "choco": "^0.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
@@ -36,7 +37,8 @@
     "livekit-server-sdk": "^1.2.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.309.0",
-    "next": "14.0.4",
+    "next": "^14.2.3",
+    "openssl": "^2.0.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
@@ -45,7 +47,7 @@
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-select": "^5.8.0",
-    "svix": "^1.15.0",
+    "svix": "^1.24.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "toast": "^0.5.4",
